--- a/nomanskycraft/static/style.css
+++ b/nomanskycraft/static/style.css
@@ -63,6 +63,13 @@ h1, h2, h3, h4 {
 }
 .noborder {
     text-align: right;
-    border: 0;
+    /* border: 0; */
     width: 10px;
 }
+
+a:visited{
+  color:blue;
+}
+.breakline {
+ display: block;
+ }
