Add more images, update style

--- a/nomanskycraft/templates/index.html
+++ b/nomanskycraft/templates/index.html
@@ -68,7 +68,7 @@
                     <table>
                         <thead>
                             <tr>
-                                <th>Item</th>
+                                <th class='itemcolumn'>Item</th>
                                 <th>Price</th>
                                 <th>Recipe</th>
                                 <th>Required for</th>
