Redesign app, remove chosen

--- a/nomanskycraft/static/style.css
+++ b/nomanskycraft/static/style.css
@@ -5,6 +5,8 @@
 }
 body {
     padding-bottom: 50px;
+    padding-left: 50px;
+    padding-right: 50px;
 }
 
 #items {
@@ -20,22 +22,13 @@ img {
 
 #inventory {
     margin: auto;
-    position:relative;
+    /* position:relative; */
     width: 70%;
     min-height: 200px;
 }
+
 #inventory table {
     margin-bottom: 50px;
-}
-
-#inventoryinput {
-    position: absolute;
-    bottom: 0px;
-}
-#totalwrapper {
-    position: absolute;
-    right: 10px;
-    bottom: 25px;
 }
 
 #canmake {
@@ -70,9 +63,34 @@ h1, h2, h3, h4 {
 a:visited{
   color:blue;
 }
+
 .breakline {
- display: block;
- }
+     display: block;
+}
+
  .itemcolumn {
      width: 30%
  }
+
+ li {
+     display: inline-block;
+      margin: 0 10px;
+ }
+
+ #info {
+     padding-bottom: 20px;
+ }
+
+ #info div {
+     padding: 5px;
+ }
+ #info div span.info {
+     padding-left: 10px;
+     padding-right: 10px;
+ }
+
+span.name {
+    cursor:pointer;
+    color:blue;
+    text-decoration:underline;
+}
