--- a/nomanskycraft/templates/index.html
+++ b/nomanskycraft/templates/index.html
@@ -6,7 +6,6 @@
         <title>No Man Sky Craft</title>
         <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
         <link rel="stylesheet" href="/static/style.css" type="text/css" media="screen" title="no title" charset="utf-8">
-        <link rel="stylesheet" href="/static/chosen.css" type="text/css" media="screen" title="no title" charset="utf-8">
     </head>
     <body>
         <div id='content'>
@@ -37,11 +36,21 @@
                     </tfoot>
                 </table>
 
-                <div id='inventoryinput'>
-                    <select id='inventoryitem'></select>
-                    <input type='number' id='inventoryquantity' value="250"/>
-                    <input type='button' id='inventoryadd' value='Add'></input>
+                <div id='info'>
                 </div>
+
+                <div id='inventoryinput'>
+                    <label for='inventoryitem'>Item Search</label>
+                    <input type='text' id='inventoryitem'></select>
+                    <!-- <input type='number' id='inventoryquantity' value="250"/> -->
+                    <!-- <input type='button' id='inventoryadd' value='Add'></input> -->
+                </div>
+
+                <div id='quickadd'>
+                    <ul id='quicklist'>
+                    </ul>
+                </div>
+
             </div>
 
 
@@ -61,30 +70,12 @@
                 </table>
             </div>
 
-            <div id='items'>
-                <h3>Prices and Recipes</h3>
-                <input type='button' id='toggleitems' value='Toggle'></input>
-                <div id='itemstable'>
-                    <table>
-                        <thead>
-                            <tr>
-                                <th class='itemcolumn'>Item</th>
-                                <th>Price</th>
-                                <th>Recipe</th>
-                                <th>Required for</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-
         </div>
         <script src="https://code.jquery.com/jquery-3.1.0.js"
                 integrity="sha256-slogkvB1K3VOkzAI8QITxV3VzpOnkeNVsKvtkYLMjfk=" crossorigin="anonymous"></script>
-        <script src='/static/chosen.jquery.js'></script>
-        <script src='/static/chosen.proto.js'></script>
+        <!-- <script src='/static/chosen.jquery.js'></script> -->
+        <!-- <script src='/static/chosen.proto.js'></script> -->
+        <script src='/static/util.js'></script>
         <script src='/static/app.js'></script>
         <script>
               (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
