--- a/nomanskycraft/templates/index.html
+++ b/nomanskycraft/templates/index.html
@@ -4,8 +4,15 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width" />
         <title>No Man Sky Craft</title>
+        <!-- bower:css -->
+        <!-- endbower -->
+
+        <!-- inject:css -->
+        <!-- endinject -->
+
+        <!-- bower:js -->
+        <!-- endbower -->
         <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-        <link rel="stylesheet" href="/static/style.css" type="text/css" media="screen" title="no title" charset="utf-8">
     </head>
     <body>
         <div id='content'>
@@ -71,12 +78,8 @@
             </div>
 
         </div>
-        <script src="https://code.jquery.com/jquery-3.1.0.js"
-                integrity="sha256-slogkvB1K3VOkzAI8QITxV3VzpOnkeNVsKvtkYLMjfk=" crossorigin="anonymous"></script>
-        <!-- <script src='/static/chosen.jquery.js'></script> -->
-        <!-- <script src='/static/chosen.proto.js'></script> -->
-        <script src='/static/util.js'></script>
-        <script src='/static/app.js'></script>
+        <!-- inject:js -->
+        <!-- endinject -->
         <script>
               (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
               (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
