--- a/nomanskycraft/templates/index.html.j2
+++ b/nomanskycraft/templates/index.html.j2
@@ -78,6 +78,8 @@
             </div>
 
         </div>
+        <!-- app:js -->
+        <!-- endinject -->
         <!-- inject:js -->
         <!-- endinject -->
         <script>
