--- a/nomanskycraft/templates/home.html.j2
+++ b/nomanskycraft/templates/home.html.j2
@@ -14,7 +14,7 @@
         <!-- endbower -->
     </head>
     <body>
-        body
+        <div id='react-content'></div>
         <!-- inject:js -->
         <!-- endinject -->
     </body>
